k3s/cluster/apps/test-app/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name:  test-app
